# AIE5_Final

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: actions.py  agent.py  workflows.py
config/: settings.py
database/: vector_store.py
llm/: llm_client.py
rag/: retriever.py
schemas/: models.py
ui/: streamlit_app.py  test.py
utils/: redis_utils.py
vectordata/: test.py  vector.py
